<resources>
    <string name="app_name">Lyubishchev Timing</string>
    <string name="tab_task">Tasks</string>
    <string name="tab_summary">Summary</string>

    <!--fragment_task.xml-->
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <!--activity_task.xml-->
    <string name="goal">Goal: %1$s</string>
    <string name="done">Done: %1$s</string>
    <string name="left">Left: %1$s</string>
    <string name="start">Start</string>
    <string name="default_left">day off</string>
    <string name="default_done">00:00:00</string>

    <!--activity_add_edit_task.xml-->
    <string name="task_name_label">Task name: </string>
    <string name="task_days_label">Days for the task: </string>
    <string name="duration_label">Duration </string>
    <string name="hours_label">hours</string>
    <string name="minutes_label">minutes</string>
    <string name="mon_label">Mon</string>
    <string name="tue_label">Tue</string>
    <string name="wed_label">Wed</string>
    <string name="thu_label">Thu</string>
    <string name="fri_label">Fri</string>
    <string name="sat_label">Sat</string>
    <string name="sun_label">Sun</string>
    <string name="save">Save</string>


    <!--activity_time_tracking.xml-->
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="stopwatch">Stopwatch</string>

    <!--activity_time_tracking_summary.xml-->
    <string name="good_job">Good job!</string>
    <string name="continue_button">Continue</string>

    <!--fragment_summary-->
    <string name="period_label">Period: </string>
    <string name="today">today</string>
    <string name="ineffective_time">Ineffective time</string>
    <string name="chart_name">%1$d hours %2$d min out of %3$d hours %4$d min</string>
    <string name="date">Mon, Feb 17</string>
    <string name="download">Download</string>


    <!--widget-->
    <string name="add_widget">Add widget</string>
    <string name="productivity_label">Productivity:</string>
    <string name="actual_time">%1$d hours %2$d min</string>
    <string name="desired_time">out of %1$d hours %2$d min"</string>


</resources>
