<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeTrackingSummaryActivity"
    android:background="@color/colorPrimary">


    <TextView
        android:id="@+id/good_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_job"
        android:textSize="@dimen/good_job"
        android:textColor="@color/colorIcons"
        android:layout_marginTop="@dimen/margin_good_job_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Meditation"
        android:textColor="@color/colorIcons"
        android:textSize="@dimen/task_name"
        android:layout_marginTop="@dimen/margin_task_label_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/good_job" />

    <TextView
        android:id="@+id/time_amount_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/task_name"
        android:textColor="@color/colorIcons"
        android:layout_marginTop="@dimen/margin_time_amount_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_label"
        tools:text="@string/duration_label" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:textAllCaps="true"
        android:layout_marginBottom="@dimen/margin_cancel_btn_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_button_shape"
        android:textColor="@color/colorIcons"/>
</androidx.constraintlayout.widget.ConstraintLayout>