<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="wrap_content"
        android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/margin_start"
    android:layout_marginLeft="@dimen/margin_start"
    android:layout_marginRight="@dimen/margin_start"
    android:layout_marginEnd="@dimen/margin_start"
    android:layout_marginTop="@dimen/margin_start"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_period_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_start"
            android:layout_marginStart="@dimen/margin_start"
            android:text="@string/period_label"
            android:textSize="@dimen/list_title_size"
            android:textColor="@color/colorTextPrimary" />

        <TextView
            android:id="@+id/time_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_start"
            android:layout_marginStart="@dimen/margin_start"
            android:text="@string/today"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/list_title_size"
            android:clickable="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_start"
        android:layout_marginStart="@dimen/margin_start"
        tools:text="@string/date"
        android:textSize="@dimen/date_label_size"
        android:textColor="@color/colorTextPrimary"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_start"/>


    <com.github.mikephil.charting.charts.PieChart
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/pie_chart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="@dimen/margin_start"
        android:layout_marginRight="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:layout_marginLeft="@dimen/margin_start"
        android:layout_marginStart="@dimen/margin_start"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_download_csv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_download"
        android:background="@color/colorAccent"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:layout_marginRight="@dimen/margin_start"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
